[gd_scene load_steps=6 format=3 uid="uid://bldgqq7r0ci60"]

[ext_resource type="Theme" uid="uid://dqi0hk3a3o51b" path="res://res/bird_theme.tres" id="1_ub45x"]
[ext_resource type="Script" path="res://scenes/score_panel.gd" id="2_0axvj"]

[sub_resource type="Animation" id="Animation_5ryec"]
resource_name = "glow"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Container/Mh/LabelNew:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 0, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_4b7lc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Container/Mh/LabelNew:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_flkp6"]
_data = {
"RESET": SubResource("Animation_4b7lc"),
"glow": SubResource("Animation_5ryec")
}

[node name="ScorePanel" type="MarginContainer"]
theme = ExtResource("1_ub45x")
theme_override_constants/margin_top = 64
theme_override_constants/margin_bottom = 64
script = ExtResource("2_0axvj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score "
horizontal_alignment = 1

[node name="LabelScore" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.846, 0.9, 0.09, 1)
text = "10
"
horizontal_alignment = 1

[node name="Container" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Container"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Container/HBoxContainer2"]
layout_mode = 2
text = "High "
horizontal_alignment = 1

[node name="LabelHigh" type="Label" parent="VBoxContainer/Container/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.846, 0.9, 0.09, 1)
text = "10
"
horizontal_alignment = 1

[node name="Mh" type="Control" parent="VBoxContainer/Container"]
layout_mode = 2

[node name="LabelNew" type="Label" parent="VBoxContainer/Container/Mh"]
unique_name_in_owner = true
layout_mode = 2
offset_left = -233.0
offset_top = -39.0
offset_right = -103.0
offset_bottom = 52.0
theme_override_font_sizes/font_size = 36
text = "new"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 162

[node name="AnimNew" type="AnimationPlayer" parent="."]
autoplay = "glow"
libraries = {
"": SubResource("AnimationLibrary_flkp6")
}
